--- a/src/app/comments/comment/comment.component.scss
+++ b/src/app/comments/comment/comment.component.scss
@@ -14,7 +14,11 @@
 .comment-wrapper {
     padding: 2px 10px 5px;
     background: var(--ion-color-light);
-    border-radius: 2px;    
+    border-radius: 2px;  
+}
+
+.secondary {
+    margin-left: 40px;
 }
 
 p {
