--- a/src/app/comments/comments-block/comments-block.component.html
+++ b/src/app/comments/comments-block/comments-block.component.html
@@ -1,6 +1,6 @@
 <div class="comments-block">
     <div *ngIf="(comments$ | async)?.length" class="comments-stats">
-        <p>{{(comments$ | async)?.length}} коментар</p>
+        <p>{{totalComments}} коментар</p>
     </div>
     <div class="buttons">
         <ion-button fill="clear">
@@ -22,14 +22,20 @@
                 <div class="existing-comments">
                     <ng-container *ngIf="(comments$ | async)?.length; else noComments">
                         <ng-container *ngFor="let comment of (comments$ | async)">
-                            <app-comment [comment]="comment"></app-comment>
+                            <app-comment [comment]="comment" (replyToClicked)="onReplyTo($event)" [class.fadeout]="replyTo && comment.id !== replyTo"></app-comment>
+                            <ng-container *ngIf="!!comment.children?.length">
+                                <ng-container *ngFor="let childComment of comment.children">
+                                    <app-comment [comment]="childComment" (replyToClicked)="onReplyTo($event)" [class.fadeout]="replyTo && childComment.id !== replyTo"></app-comment>
+                                </ng-container>
+                            </ng-container>
                         </ng-container>
                     </ng-container>
                 </div>
                 <ion-item class="comment-input" slot="fixed">
-                    <ion-textarea #textarea type="text" placeholder="Напишіть коментар..."
+                    <ion-label *ngIf="replyTo" position="stacked"><ion-button size="small" fill="clear" (click)="cancelReplyTo()">Скасувати</ion-button></ion-label>
+                    <ion-textarea #textarea type="text" [placeholder]="replyTo? 'Напишіть відповідь...' : 'Напишіть коментар...'"
                         [(ngModel)]="text"></ion-textarea>
-                    <ion-button size="small" fill="clear" (click)="saveComment()" [disabled]="text.length < 5"><ion-icon name="save-outline" slot="icon-only"></ion-icon></ion-button>
+                    <ion-button size="default" fill="clear" (click)="saveComment()" [disabled]="text.length < 5" slot="end" class="save-comment-btn"><ion-icon name="send-outline" slot="icon-only"></ion-icon></ion-button>
                 </ion-item>
             </div>
 
