added comments throughout the app

--- a/src/app/comments/comment/comment.component.html
+++ b/src/app/comments/comment/comment.component.html
@@ -5,6 +5,6 @@
     </div>
     <div class="bottom-row">
         <span>{{comment.addedOn | date}}</span>
-        <ion-button fill="clear" size="small" (click)="reply()">Відповісти</ion-button>
+        <ion-button fill="clear" size="small" (click)="buttonClicked()">{{buttonText}}</ion-button>
     </div>
 </div>
