--- a/src/app/pages/calendar/components/calendar-meal/calendar-meal.component.html
+++ b/src/app/pages/calendar/components/calendar-meal/calendar-meal.component.html
@@ -23,6 +23,7 @@
     <ng-container>
       <div *ngFor="let item of detailedRecipiesList">
         <app-calendar-recipy [recipy]="item" [day]="day" [mealtime]="mealtime"></app-calendar-recipy>
+        <app-comments-block [currentUser]="user$ | async" [recipyId]="item.id"></app-comments-block>
       </div>
     </ng-container>
   </ng-container>
