--- a/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
+++ b/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
@@ -9,7 +9,7 @@
     <ng-container *ngFor="let recipy of recipies; let index = index">
       <app-recipy-short-view *ngIf="index < numberOfRecipiesToDisplay" [currentUser]="user$ | async" [recipy]="recipy"
         [productPreferencesChips]="productChips"></app-recipy-short-view>
-        <app-comments-block [currentUser]="currentUser" [recipyId]="recipy.id"></app-comments-block>
+        <app-comments-block *ngIf="index < numberOfRecipiesToDisplay" [currentUser]="currentUser" [recipyId]="recipy.id"></app-comments-block>
     </ng-container>
     <ion-infinite-scroll *ngIf="numberOfRecipiesToDisplay <= recipies.length" (ionInfinite)="onIonInfinite($event)">
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
