--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.scss
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   font-size: 12px;
   color: var(--ion-color-medium);
+  gap: 4px;
 }
 
 .collection-name {
@@ -16,7 +17,7 @@
 }
 
 .recipy-photo {
-  height: 125px;
+  height: auto;
   width: 140px;
   min-width: 140px;
   margin-left: 10px;
