--- a/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.scss
+++ b/src/app/pages/calendar/components/calendar-recipy/calendar-recipy.component.scss
@@ -3,6 +3,8 @@
   color: var(--ion-color-medium);
   font-size: 12px;
   flex-direction: column;
+  gap: 3px;
+  margin-top: 10px;
   & > span {
     margin-right: 10px;
   }
@@ -25,7 +27,7 @@ h2 {
 }
 
 .recipy-photo {
-  height: 125px;
+  height: auto;
   width: 140px;
   min-width: 140px;
   margin-left: 10px;
