togglable menu for all devices

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app class="app-container">
-  <ion-split-pane contentId="main-content">
+  <ion-split-pane contentId="main-content" when="false">
 
     <ion-menu contentId="main-content">
       <ion-content>
