--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
 
 
 @media (min-width:'1200px'){
-    ion-menu {
-    max-width: max-content;
-}
+//     ion-menu {
+//     max-width: max-content;
+// }
 }
