--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.html
@@ -1,5 +1,61 @@
-<ion-card (click)="onRecipyClicked()">
-  <ion-card-header>
+<ion-card (click)="onRecipyClicked()" *ngIf="!isBigScreen">
+  <ng-container *ngTemplateOutlet="genericInfo"></ng-container>  
+
+  <ion-card-content>
+    <app-image *ngIf="recipy.photo" [imagePath]="recipy.photo"></app-image>
+    <div *ngIf="!recipy.photo" class="ingredients-wrapper no-photo">
+      <ng-container *ngTemplateOutlet="ingredsInfo"></ng-container>
+    </div>
+  </ion-card-content>
+
+  <div class="overlay once" [class.visible]="isRecipyClicked">
+    <div class="overlay-flex-container">
+      <ng-container *ngTemplateOutlet="additionalInfo"></ng-container>
+      <div>
+        <div class="ingredients-wrapper">
+          <ng-container *ngTemplateOutlet="ingredsInfo"></ng-container>
+        </div>
+      </div>
+    </div>
+
+    <div class="actions-pane">
+      <ion-button (click)="goFullRecipy()">
+
+        Перейти до рецепту
+      </ion-button>
+      <ion-button *ngIf="currentUser" (click)="showCollections()">
+
+        Колекції
+      </ion-button>
+    </div>
+  </div>
+  <div class="overlay collections" [class.visible]="isShowCollections">
+    <ion-list>
+      <ion-item color="tertiary" *ngFor="let collection of recipyCollections"
+        (click)="onCollectionSelected(collection)">
+        <ion-label>{{ getIsInCollection(collection) ? "✓" : "" }}
+          {{ collection }}</ion-label>
+      </ion-item>
+    </ion-list>
+  </div>
+</ion-card>
+
+<ion-card *ngIf="isBigScreen" class="big-screen-card">
+  <div class="big-screen-card-background">
+    <app-image *ngIf="recipy.photo" [imagePath]="recipy.photo"></app-image>
+  </div>
+  <div class="big-screen-card-content">
+    <ng-container *ngTemplateOutlet="genericInfo"></ng-container>  
+    <ion-card-content>
+      <ng-container *ngTemplateOutlet="additionalInfo"></ng-container>
+    <ng-container *ngTemplateOutlet="ingredsInfo"></ng-container>
+    </ion-card-content>
+    
+  </div>
+</ion-card>
+
+<ng-template #genericInfo>
+  <ion-card-header>    
     <ion-card-title>{{ recipy.name }}</ion-card-title>
     <ion-card-subtitle>
       <div class="flex-container">
@@ -27,91 +83,54 @@
 
     </ion-card-subtitle>
   </ion-card-header>
+</ng-template>
 
-  <ion-card-content>
-    <app-image *ngIf="recipy.photo" [imagePath]="recipy.photo"></app-image>
-    <div *ngIf="!recipy.photo" class="ingredients-wrapper no-photo">
-      <h6>Основні інгридієнти</h6>
-      <div>
-        <ng-container *ngFor="let ingredient of topIngredients">
-          <span class="ingredient-text">{{
-            getIngredientText(ingredient).toLowerCase()
-            }}</span>
+<ng-template #ingredsInfo>
+  <h6>Основні інгридієнти</h6>
+  <div class="ingreds-list">
+    <ng-container *ngFor="let ingredient of topIngredients">
+      <span class="ingredient-text">{{
+        getIngredientText(ingredient).toLowerCase()
+        }}</span>
+    </ng-container>
+  </div>
+</ng-template>
+
+<ng-template #additionalInfo>
+  <div>
+    <div class="time-details overlay-row">
+      <ion-icon name="alarm" *ngIf="isNeedsAdvancePreparation"></ion-icon>
+
+      <span *ngIf="isNeedsAdvancePreparation">потребує попередньої підготовки</span>
+    </div>
+    <div class="overlay-row">{{ complexity }} рецепт</div>
+
+    <div class="advance-prep overlay-row" *ngIf="recipy.isCheckedAndApproved">
+      <ion-icon name="checkmark-done"></ion-icon>
+      рецепт перевірений на практиці
+    </div>
+    <div *ngIf="recipy.calorificValue" class="overlay-row">
+      Калорійність: {{ Math.round(recipy.calorificValue) }} ккал в 100гр.
+    </div>
+    <div class="overlay-row">
+      Автор: {{ recipy.author }}
+    </div>
+    <div *ngIf="recipy.portionSize" class="overlay-row">Рекомендований розмір порції: {{recipy.portionSize}}гр.
+    </div>
+    <div class="collection-tags overlay-row">
+      <span>Теги: </span>
+      <ion-chip class="collection-chip" *ngFor="let tag of recipy.type">{{
+        DishType[tag]
+        }}</ion-chip>
+    </div>
+    <div class="chip-selection-list">
+      <ng-container *ngIf="productPreferencesChips?.length">
+        <ng-container *ngFor="let item of productPreferencesChips">
+          <ion-chip *ngIf="getIsInRecipy(item.productId)" class="collection-chip" [color]="item.color">
+            {{item.name}}: {{getProductText(item.productId)}}
+          </ion-chip>
         </ng-container>
-      </div>
-    </div>
-  </ion-card-content>
-
-  <div class="overlay once" [class.visible]="isRecipyClicked">
-    <div class="overlay-flex-container">
-      <div>
-        <div class="time-details overlay-row">
-          <ion-icon name="alarm" *ngIf="isNeedsAdvancePreparation"></ion-icon>
-
-          <span *ngIf="isNeedsAdvancePreparation">потребує попередньої підготовки</span>
-        </div>
-        <div class="overlay-row">{{ complexity }} рецепт</div>
-
-        <div class="advance-prep overlay-row" *ngIf="recipy.isCheckedAndApproved">
-          <ion-icon name="checkmark-done"></ion-icon>
-          рецепт перевірений на практиці
-        </div>
-        <div *ngIf="recipy.calorificValue" class="overlay-row">
-          Калорійність: {{ Math.round(recipy.calorificValue) }} ккал в 100гр.
-        </div>
-        <div class="overlay-row">
-          Автор: {{ recipy.author }}
-        </div>
-        <div *ngIf="recipy.portionSize" class="overlay-row">Рекомендований розмір порції: {{recipy.portionSize}}гр.
-        </div>
-        <div class="collection-tags overlay-row">
-          <span>Теги: </span>
-          <ion-chip class="collection-chip" *ngFor="let tag of recipy.type">{{
-            DishType[tag]
-            }}</ion-chip>
-        </div>
-        <div class="chip-selection-list">
-          <ng-container *ngIf="productPreferencesChips?.length">
-            <ng-container *ngFor="let item of productPreferencesChips">
-              <ion-chip *ngIf="getIsInRecipy(item.productId)" class="collection-chip" [color]="item.color">
-                {{item.name}}: {{getProductText(item.productId)}}
-              </ion-chip>
-            </ng-container>
-          </ng-container>
-        </div>
-      </div>
-      <div>
-        <div class="ingredients-wrapper">
-          <h6>Основні інгридієнти</h6>
-          <div>
-            <ng-container *ngFor="let ingredient of topIngredients">
-              <span class="ingredient-text">{{
-                getIngredientText(ingredient).toLowerCase()
-                }}</span>
-            </ng-container>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="actions-pane">
-      <ion-button (click)="goFullRecipy()">
-
-        Перейти до рецепту
-      </ion-button>
-      <ion-button *ngIf="currentUser" (click)="showCollections()">
-
-        Колекції
-      </ion-button>
+      </ng-container>
     </div>
   </div>
-  <div class="overlay collections" [class.visible]="isShowCollections">
-    <ion-list>
-      <ion-item color="tertiary" *ngFor="let collection of recipyCollections"
-        (click)="onCollectionSelected(collection)">
-        <ion-label>{{ getIsInCollection(collection) ? "✓" : "" }}
-          {{ collection }}</ion-label>
-      </ion-item>
-    </ion-list>
-  </div>
-</ion-card>
+</ng-template>
