--- a/src/app/shared/components/dialogs/select-option-dialog/select-option-dialog.component.html
+++ b/src/app/shared/components/dialogs/select-option-dialog/select-option-dialog.component.html
@@ -18,7 +18,7 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
-      <app-recipy-short-view *ngIf="recipy" [currentUser]="user$ | async" [recipy]="recipy"></app-recipy-short-view>
+      <app-recipy-short-view *ngIf="recipy" [currentUser]="user$ | async" [recipy]="recipy" [isBigScreen]="isBigScreen"></app-recipy-short-view>
 
       <h5>{{(isUseDefaultPortionSettings$| async) ? 'Вкажіть' : 'Змінити'}} кількість порцій:</h5>
       <div class="amount-wrapper">
