--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
@@ -134,3 +134,30 @@ ion-card-content {
     font-weight: 600;
   }
 }
+
+.ingreds-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.big-screen-card {
+  &-background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    padding-left: 37%;
+  }
+  &-content {
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 75%, rgba(255, 255, 255, 0.8) 87%, rgba(255, 255, 255, 0) 100%);
+    z-index: 2;
+    position: relative;
+    padding: 0 5% 0 10px;
+  }
+
+  ion-card-content {
+    height: 330px;
+  }
+}
