--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
@@ -150,14 +150,47 @@ ion-card-content {
   }
   &-content {
     width: 50%;
-    height: 100%;
+    height: 550px;
     background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 75%, rgba(255, 255, 255, 0.8) 87%, rgba(255, 255, 255, 0) 100%);
     z-index: 2;
     position: relative;
     padding: 0 5% 0 10px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+
+  &-action-buttons {
+    position: absolute;
+    bottom: 0;
+
+    .collections.visible {
+      height: 550px;
+      width: 300px;
+      opacity: 1;
+      display: flex;
+      flex-direction: column;
+      padding-block: 0 20px;
+
+      .close-btn {
+        align-self: flex-end;
+        margin-right: -10px;
+      }
+
+      ion-list {
+        max-height: 100%;
+      }
+    }
   }
 
   ion-card-content {
-    height: 330px;
+    height: unset;
+    flex-grow: 1;
+  }
+}
+
+@media (orientation: landscape) and (max-width: 1600px){
+  ::ng-deep app-recipies .big-screen-card-content {
+    height: 70vh !important;
   }
 }
